--- a/client/app/index.html
+++ b/client/app/index.html
@@ -42,11 +42,13 @@
   
   <!-- App Dependecies Scripts -->
   <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/firebase/firebase.js"></script>
+  <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
   <!-- App Scripts -->
-  <script src="dist/js/app.min.js"></script>
+  <script src="dist/js/app.concat.js"></script>
   
 </body>
 </html>
