feat: add favicon

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,9 +15,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta content="yes" name="apple-touch-fullscreen" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/pictures/logo/icon-medium.png"/>
+<!--   <link rel="apple-touch-icon" sizes="72x72" href="assets/pictures/logo/icon-medium.png"/>
   <link rel="apple-touch-icon" sizes="114x114" href="assets/pictures/logo/icon-large.png"/>
-  <link rel="shortcut icon" sizes="114x114" href="assets/pictures/logo/icon-large.png"/>
+  <link rel="shortcut icon" sizes="114x114" href="assets/pictures/logo/icon-large.png"/> -->
 
   <!-- App style files -->
   <link rel="stylesheet" href="dist/css/app.css">
@@ -48,7 +48,7 @@
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
   <!-- App Scripts -->
-  <script src="dist/js/app.concat.js"></script>
+  <script src="dist/js/app.min.js"></script>
   
 </body>
 </html>
